# Aegis-Router

./: .gitignore  Dockerfile  README.md  benchmark.py  benchmark_prefill_decode.py  demo.py  demo_production.py  pyproject.toml  requirements.txt  run_all_tests.sh
aegis_router/: __init__.py  __main__.py  main.py
aegis_router/api/: server.py
aegis_router/core/: radix_attention_engine.py  radix_trie.py  worker.py
aegis_router/matching/: approximate.py
aegis_router/router/: cache_router.py
configs/: supervisord.conf
docs/: PREFILL_DECODE_OPTIMIZATION.md
tests/: test_approximate.py  test_cache_router.py  test_functional.py  test_radix_attention_integration.py  test_radix_trie.py
