[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-router"
version = "0.1.0"
description = "Cache-aware LLM request router with Radix Trie matching"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Aegis Team"},
]
keywords = ["llm", "router", "cache", "vllm", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "mmh3>=4.0.0",
    "numpy>=2.0.0",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]
benchmark = [
    "locust>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "tabulate>=0.9.0",
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
    "py-spy>=0.3.0",
    "memray>=1.0.0",
]

[project.scripts]
aegis-router = "aegis_router.main:main"

[project.urls]
Homepage = "https://github.com/aegis-router/aegis-router"
Documentation = "https://github.com/aegis-router/aegis-router#readme"
Repository = "https://github.com/aegis-router/aegis-router"
Issues = "https://github.com/aegis-router/aegis-router/issues"

[tool.hatch.build.targets.wheel]
packages = ["aegis_router"]

# -----------------------------------------------------------------------------
# Testing Configuration
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=aegis_router",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests using real models",
    "benchmark: marks tests as benchmark tests",
    "radix_attention: marks RadixAttention+Batching integration tests",
]

# -----------------------------------------------------------------------------
# Coverage Configuration
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["aegis_router"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "aegis_router/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

# -----------------------------------------------------------------------------
# Linting & Formatting (Ruff)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["aegis_router"]

# -----------------------------------------------------------------------------
# Type Checking (mypy)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "mmh3"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -----------------------------------------------------------------------------
# Black Formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
